vlib/v/parser/tests/fn_attributes_duplicate_single.out
vlib/v/parser/tests/fn_attributes_duplicate_single.vv:1:11: error: duplicate attribute `inline`
    1 | @[inline; inline]
      |           ~~~~~~
    2 | fn foo() {}
    3 |
